# Hd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  TODO.txt
Hd/Hd/: Window.cpp  Window.h
Hd/glad/: glad.c
apps/: CMakeLists.txt
apps/3dtest/: CMakeLists.txt  main.cpp
apps/balls/: CMakeLists.txt  ball.cpp  ball.frag  ball.h  ball.vert  balls.cpp  balls.h  main.cpp
apps/gravity/: CMakeLists.txt  ball_compute.glsl  frag.glsl  main.cpp  vertex.glsl
apps/mandelbrot/: CMakeLists.txt  main.cpp  mandelbrot.glsl
apps/orbit/: CMakeLists.txt  circle.cpp  circle.h  orbit.cpp
apps/res/shaders/: balls.frag  balls.vert  balls_compute.glsl  frag.glsl  line.glsl  texture.glsl  vertex.glsl
apps/resource_test/: CMakeLists.txt  main.cpp
apps/resource_test/res/: file1.txt  file2.txt
apps/texture_test/: CMakeLists.txt  main.cpp
apps/texture_test/res/: texture.glsl
apps/window_test/: CMakeLists.txt  main.cpp
cmake/: resource.cmake
include/: Hd.h  glHeader.h
include/Hd/: Camera.h  Camera2D.h  FrameBuffer.h  FunctionList.h  Gui.h  Resource.h  Shader.h  Texture.h  Window.h  WindowCallbacks.h
include/glad/: glad.h
src/Hd/: Camera.cpp  Camera2D.cpp  FrameBuffer.cpp  Gui.cpp  Resource.cpp  Shader.cpp  Texture.cpp  Window.cpp  WindowCallbacks.cpp
